# essensplan

./: .devenv.flake.nix  devenv.nix
backend/: Cargo.toml
backend/migrations/: 20250330214018_init.up.sql
backend/src/: db.rs  main.rs
