[package]
name = "backend"
version = "0.0.0"
edition = "2021"
authors = ["amadeus@mozart409.com" ]
repository = "github.com/mozart409/essensplan"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
derive_more = { version = "2.0.1", features = ["display"] }
dotenvy = "0.15.7"
env_logger = "0.11.7"
log = "0.4.27"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time", "derive", "macros", "migrate",  ] }
